--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,11 +8,28 @@
 @import 'bootstrap/scss/bootstrap';
 
 /* フォームのスタイル */
+
+.form-row {
+    margin-bottom: 10px;
+}
+
 #form-group {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.form-group input, .form-group select {
+    width: 100%;
+    padding: 5px;
+}
+
+.btn-search {
+    background-color: #fff;
+    color: #000;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
 }
 
 .button_margin {
